--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mlightcad/shx-parser",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "A TypeScript library for parsing AutoCAD SHX font files",
   "type": "module",
   "main": "dist/index.cjs.js",
@@ -35,11 +35,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mlight-lee/shx-parser"
+    "url": "https://gitlab.com/mlightcad/cad-data"
   },
-  "homepage": "https://github.com/mlight-lee/shx-parser",
+  "homepage": "https://gitlab.com/mlightcad/shx-parser",
   "bugs": {
-    "url": "https://github.com/mlight-lee/shx-parser/issues"
+    "url": "https://gitlab.com/mlightcad/shx-parser/-/issues"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
